track river bug, to fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,3 +40,7 @@ target_link_libraries(${PROJECT_NAME}
     ${OPENGL_LIBRARIES}
     ${GLEW_LIBRARIES}
 )
+
+# message(STATUS "SDL2_LIBRARY: " ${SDL2_LIBRARY})
+# message(STATUS "OPENGL_LIBRARIES: " ${OPENGL_LIBRARIES})
+# message(STATUS "GLEW_LIBRARIES: " ${GLEW_LIBRARIES})
