--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "dep/sdl2"]
 	path = dep/sdl2
 	url = https://github.com/davidsiaw/SDL2.git
+[submodule "dep/freetype"]
+	path = dep/freetype
+	url = https://github.com/HeliumProject/FreeType.git
+[submodule "dep/assimp"]
+	path = dep/assimp
+	url = https://github.com/assimp/assimp.git
+[submodule "dep/bullet"]
+	path = dep/bullet
+	url = https://github.com/bulletphysics/bullet3.git
