--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,26 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
 cmake_minimum_required(VERSION 2.8)
 
-set(HAVE_LIBUDEV_H 0)
-add_subdirectory(dep/sdl2)
+# set(HAVE_LIBUDEV_H 0)
+# add_subdirectory(dep/sdl2)
+
+# Find SDL2
+find_package(SDL2 REQUIRED)
+if(NOT SDL2_FOUND)
+        message(SEND_ERROR "Failed to find SDL2.")
+endif()
 
 if(WIN32)
 	set(MINGW32_LIBRARIES mingw32)
 endif()
 
-add_subdirectory(dep/freetype)
+# add_subdirectory(dep/freetype)
+
+find_package(FREETYPE REQUIRED)
+if(NOT FREETYPE_FOUND)
+        message(SEND_ERROR "Failed to find FREETYPE.")
+endif()
+
 
 # Find OpenGL
 find_package(OpenGL REQUIRED)
@@ -35,23 +47,42 @@ if(WIN32)
 	# add_definitions(-DGLEW_STATIC)
 endif()
 
-option(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
-option(ASSIMP_BUILD_SAMPLES OFF)
-option(ASSIMP_BUILD_TESTS OFF)
-add_subdirectory(dep/assimp)
+find_package(SDL2 REQUIRED)
+if(NOT SDL2_FOUND)
+        message(SEND_ERROR "Failed to find SDL2.")
+endif()
 
-option(BUILD_BULLET2_DEMOS OFF)
-option(BUILD_CPU_DEMOS OFF)
-option(BUILD_EXTRAS OFF)
-option(BUILD_OPENGL3_DEMOS OFF)
-option(BUILD_UNIT_TESTS OFF)
-add_subdirectory(dep/bullet)
+
+# option(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
+# option(ASSIMP_BUILD_SAMPLES OFF)
+# option(ASSIMP_BUILD_TESTS OFF)
+# add_subdirectory(dep/assimp)
+
+find_package(ASSIMP REQUIRED)
+if(NOT ASSIMP_FOUND)
+        message(SEND_ERROR "Failed to find Assimp.")
+endif()
+
+
+# option(BUILD_BULLET2_DEMOS OFF)
+# option(BUILD_CPU_DEMOS OFF)
+# option(BUILD_EXTRAS OFF)
+# option(BUILD_OPENGL3_DEMOS OFF)
+# option(BUILD_UNIT_TESTS OFF)
+# add_subdirectory(dep/bullet)
+
+find_package(BULLET REQUIRED)
+if(NOT BULLET_FOUND)
+        message(SEND_ERROR "Failed to find Bullet.")
+endif()
 
 include_directories(
-    dep/sdl2/include
+    # dep/sdl2/include
+    ${SDL2_INCLUDE_DIR}
     ${GL_INCLUDE_DIRS}
     ${GLEW_INCLUDE_DIRS}
-    dep/freetype/include
+    ${FREETYPE_INCLUDE_DIRS}
+    # dep/freetype/include
 )
 
 # Create compilation database (for code completion tools)
@@ -62,11 +93,13 @@ file(GLOB_RECURSE SRCS src/*.cpp src/*.h src/*.c src/*.hpp)
 add_executable(${PROJECT_NAME} ${SRCS})
 
 target_link_libraries(${PROJECT_NAME}
-	${MINGW32_LIBRARIES}
-    SDL2main SDL2
+    ${MINGW32_LIBRARIES}
+    # SDL2main SDL2
+    ${SDL2MAIN_LIBRARY} ${SDL2_LIBRARY}
     ${OPENGL_LIBRARIES}
     ${GLEW_LIBRARIES}
-    freetype
+    ${FREETYPE_LIBRARIES}
+    # freetype
     # assimp
     # BulletDynamics BulletCollision LinearMath
 )
@@ -76,7 +109,10 @@ add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD
                    COMMAND ${CMAKE_COMMAND} -E copy_directory
                    ${CMAKE_SOURCE_DIR}/res $<TARGET_FILE_DIR:${PROJECT_NAME}>/res)
 
-# message(STATUS "SDL2_LIBRARY: " ${SDL2_LIBRARY})
+message(STATUS "SDL2_INCLUDE_DIR: " ${SDL2_INCLUDE_DIR})
+message(STATUS "SDL2_LIBRARY: " ${SDL2_LIBRARY})
+message(STATUS "SDL2_LIBRARIES: " ${SDL2_LIBRARIES})
+message(STATUS "SDL2MAIN_LIBRARY:" ${SDL2MAIN_LIBRARY})
 # message(STATUS "OPENGL_LIBRARIES: " ${OPENGL_LIBRARIES})
 message(STATUS "GLEW_LIBRARIES: " ${GLEW_LIBRARIES})
 message(STATUS "GLEW_INCLUDE_DIRS}: " ${GLEW_INCLUDE_DIRS})
